Fix alignleft class for blog posts

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -297,6 +297,11 @@ a.comments_permalink {
   float: right;
 }
 
+img.alignleft {
+  float: left;
+  margin-right: 10px;
+}
+
 /** SUBMISSIONS **/
 
 .submission {
